# erp

./: .gitignore  .http  Containerfile  Justfile  pyproject.toml
app/: __init__.py  asgi.py  config.py  dto.py  models.py  repos.py
app/controllers/: __init__.py  api.py  web.py
app/controllers/templates/: index.html.j2
tests/: __init__.py  fakes.py  test_api.py
