[project]
name = "erp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "advanced-alchemy>=0.32.2",
    "aiosqlite>=0.21.0",
    "alembic>=1.14.1",
    "asyncpg>=0.30.0",
    "environs>=14.1.1",
    "jinja2>=3.1.5",
    "jinja2-fragments>=1.8.0",
    "litestar[cryptography,jinja,sqlalchemy,standard]>=2.15.1",
    "msgspec>=0.19.0",
    "pydantic[email]>=2.10.6",
    "sqlalchemy>=2.0.38",
]

[dependency-groups]
dev = [
    "litestar-browser-reload>=0.3.0",
]
