[project]
name = "erp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "advanced-alchemy>=0.32.2",
    "aiosqlite>=0.21.0",
    "alembic>=1.14.1",
    "asyncpg>=0.30.0",
    "bcrypt>=4.3.0",
    "environs>=14.1.1",
    "jinja2>=3.1.5",
    "jinja2-fragments>=1.8.0",
    "litestar[cryptography,jinja,sqlalchemy,standard]>=2.15.1",
    "msgspec>=0.19.0",
    "sqlalchemy>=2.0.38",
]

[dependency-groups]
dev = [
    "anyio>=4.8.0",
    "httpx-sse>=0.4.0",
    "litestar-browser-reload>=0.3.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"